...
                .frame(maxWidth: .infinity, maxHeight: height)
        }
        .foregroundStyle(.black)
        .background(Color.theme.yellow)
        .disabled(quantity >= inStockMax)
        .opacity(quantity >= inStockMax ? 0.5 : 1)
        .accessibilityIdentifier("IncreaseQuantityButton")
    }
}

