...
        VStack {
            Image(systemName: "cart.circle")
                .resizable()
                .frame(width: 250, height: 250)
                .padding(.bottom)
            
            Text("Your cart is empty 😭")
                .font(.title2)
        }
        .foregroundColor(.secondary)
        .padding()
        .accessibilityElement(children: .combine)
    }
...
