...
            }
            .navigationTitle("Browse")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Text("\(vm.totalPrice.twoDecimalPlaces) £")
                        .accessibilityLabel("Total price in cart")
                        .accessibilityValue("\(vm.totalPrice.twoDecimalPlaces) pounds")
                }
            }
        }
        .onDisappear(perform: resetSorting)
        .task { await vm.loadProducts() }
...
